--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://example.com'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://play.google.com/store/apps/details?id=com.pakistan.mobilesworld'>link to Google Play.
     </body>
 </html>
